log/build_2024-07-03_16-50-18/gripper_sub/stderr.log
  File "/home/pi/handsystem/install/gripper_sub/lib/python3.10/site-packages/gripper_sub/subscriber_member_function.py", line 128
    else
        ^
SyntaxError: expected ':'

